change pelucio create wallet, now receive balances in string array
